force-app/main/default/objects/Quota__c.object
<CustomObject>
    <description>What: DO NOT REMOVE. Used in the analytics demo data tool.</description>
    <fields>
        <fullName>External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OwnerName__c</fullName>
        <label>Owner Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QuotaAmount__c</fullName>
        <label>Quota Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QuotaOwner_Id__c</fullName>
        <label>Quota Owner</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StartDate__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>analyticsdemo_batch_id__c</fullName>
        <label>analyticsdemo_batch_id__c</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Quota__c</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Quota Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Quota__c</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>